# src/main/java/com/w2w/api/position/repository/SkillGroupRepository.java
@@ -1,11 +1,0 @@
-package com.w2w.api.position.repository;
-
-import com.w2w.api.position.model.SkillGroup;
-import org.springframework.data.jpa.repository.JpaRepository;
-import org.springframework.stereotype.Repository;
-import java.util.List;
-
-@Repository
-public interface SkillGroupRepository extends JpaRepository<SkillGroup, Integer> {
-    List<SkillGroup> findByCompanyId(Integer companyId);
-}
